# ai_documentation_create

ai_documentation_generator/: .gitignore  README.md  pyproject.toml
ai_documentation_generator/src/ai_documentation_generator/: library_functions.py  main.py
ai_documentation_generator/src/ai_documentation_generator/crews/file_resume_crew/: file_resume_crew.py
ai_documentation_generator/src/ai_documentation_generator/crews/file_resume_crew/config/: agents.yaml  tasks.yaml
ai_documentation_generator/src/ai_documentation_generator/crews/tree_generator_crew/: tree_generator_crew.py
ai_documentation_generator/src/ai_documentation_generator/crews/tree_generator_crew/config/: agents.yaml  tasks.yaml
