[project]
name = "ai_documentation_generator"
version = "0.1.0"
description = "ai_documentation_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "ai_documentation_generator.main:kickoff"
plot = "ai_documentation_generator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
